# Chrome-Dinosaur-Game

./: Animation.cpp  Animation.h  BackgroundManager.cpp  BackgroundManager.h  Bird.cpp  Bird.h  Button.cpp  Button.h  CMakeLists.txt  Cacti.cpp  Cacti.h  Chrome Dinosaur Game.sln  Chrome Dinosaur Game.vcxproj  Chrome Dinosaur Game.vcxproj.filters  Cloud.cpp  Cloud.h  EnemyManager.cpp  EnemyManager.h  FPSCounter.cpp  FPSCounter.h  Game.cpp  MainMenuState.cpp  MainMenuState.h  MoreInfo.h  OStringText.h  PlaySound.cpp  PlaySound.h  Player.cpp  Player.h  PlayingState.cpp  PlayingState.h  README.md  Random.h  State.cpp  Text.cpp  ToggleKey.cpp  ToggleKey.h
